# OOGL

./: .gitignore  CMakeLists.txt  oogl.sublime-workspace
include/GL/GL/: Context.hpp  Framebuffer.hpp  GC.hpp  Texture.hpp
src/GL/GL/: Framebuffer.cpp  Texture.cpp
src/GL/Util/: Image.cpp
src/GL/Window/: Window_Win32.cpp
